<resources>
    <string name="app_name">MJ_RickAndMorty</string>
    <string name="characters">Characters</string>
    <string name="episodes">Episodes</string>
    <string name="locations">Locations</string>
    <string name="characters_search_view_hint">Search for characters</string>
    <string name="episode_heading_name">Name</string>
    <string name="episode_heading_airing_date">Airing Date</string>
    <string name="episode_heading_episode_number">Ep. Num</string>
    <string name="species_property"><![CDATA[<b>Species</b>: %s]]></string>
    <string name="gender_property"><![CDATA[<b>Gender</b>: %s]]></string>
    <string name="map_key" translatable="false">AIzaSyDkhEeN6gvykM6eARy0ruXyHErL-FCd8OM</string>
</resources>
