<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/action_characters">

    <fragment
        android:id="@+id/action_characters"
        android:name="com.example.android.mj_rickandmorty.ui.characters.CharactersFragment"
        android:label="@string/characters"
        tools:layout="@layout/characters_fragment" />

    <fragment
        android:id="@+id/action_episodes"
        android:name="com.example.android.mj_rickandmorty.ui.episodes.EpisodesFragment"
        android:label="@string/episodes"
        tools:layout="@layout/episodes_fragment" />

    <fragment
        android:id="@+id/action_locations"
        android:name="com.example.android.mj_rickandmorty.ui.locations.LocationsFragment"
        android:label="@string/locations"
        tools:layout="@layout/locations_fragment" />

</navigation>