<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.episodes.EpisodesFragment">

    <LinearLayout
        android:id="@+id/episode_table_heading"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/episode_heading_name"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/episode_heading_airing_date"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/episode_heading_episode_number"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/episodes_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>